--- a/app/src/main/res/layout/item_vip_user.xml
+++ b/app/src/main/res/layout/item_vip_user.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="vipUser"
-            type="com.idance.adminmanager.models.VipUser" />
+            type="com.idance.adminmanager.models.DataItem" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginEnd="@dimen/_5sdp">
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_78sdp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
             app:cardElevation="2dp"
             app:cardMaxElevation="2dp"
             app:cardPreventCornerOverlap="true"
@@ -29,7 +33,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/tvnotificationsName"
@@ -38,48 +42,42 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:maxLines="2"
                     android:singleLine="true"
-                    android:text="@{vipUser.order_info, default = UserName}"
+                    android:text="@{vipUser.orderInfo, default = UserName}"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/PoppinsSemiBold"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.25" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/stt"
+                    sotien="@{vipUser.amount , default=1}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_10ssp"
-                    android:text="@{vipUser.id, default=1}"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/PoppinsRegular"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_8sdp"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1"
-                    app:layout_constraintStart_toEndOf="@id/tvnotificationsName"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="@id/tvnotificationsName"
+                    app:layout_constraintTop_toBottomOf="@+id/tvnotificationsName" />
 
                 <TextView
                     android:id="@+id/tvdeliverydate"
-                    registerDate="@{vipUser.order_id, default=august_03_2021}"
+                    registerDate="@{vipUser.orderId, default=august_03_2021}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_10ssp"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/PoppinsRegular"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_8sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1"
-                    app:layout_constraintStart_toEndOf="@id/tvnotificationsName"
-                    app:layout_constraintTop_toTopOf="@+id/stt"
+                    app:layout_constraintStart_toStartOf="@+id/tvDelivery"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDelivery"
                     app:layout_constraintVertical_bias="0.2" />
 
                 <TextView
@@ -87,19 +85,20 @@
                     android:layout_width="@dimen/_220sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_10sdp"
-                    android:maxEms="15"
-                    android:text="@{vipUser.user_id, default=knsifjqiskdnfiknfs}"
+                    android:maxEms="28"
+                    android:text="@{vipUser.userId, default=knsifjqiskdnfiknfs}"
                     android:textAlignment="viewStart"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_11sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="@+id/tvnotificationsName"
-                    app:layout_constraintTop_toBottomOf="@id/tvnotificationsName" />
+                    app:layout_constraintTop_toBottomOf="@id/stt" />
 
                 <TextView
                     android:id="@+id/tvDelivery"
-                    exp="@{vipUser.order_id, default=knsifjqiskdnfiknfs}"
+                    amount="@{vipUser.amount}"
+                    exp="@{vipUser.orderId, default=knsifjqiskdnfiknfs}"
                     android:layout_width="@dimen/_220sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
@@ -115,15 +114,23 @@
 
                 <Button
                     android:id="@+id/btn_renewal"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@android:color/background_light"
                     android:text="Gia hạn"
                     android:textColor="#03A9F4"
                     android:textSize="@dimen/_10sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/tvdeliverydate"
+                    app:layout_constraintStart_toStartOf="@+id/tvdeliverydate"
                     app:layout_constraintTop_toBottomOf="@+id/tvdeliverydate" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{vipUser.id}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
