--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -47,6 +47,7 @@
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/confirm_description"
